plugins {

    id 'java'
    id 'com.github.johnrengelman.shadow' version '6.0.0'
}

subprojects {

    group 'me.shadowchild.candor'
    version 'snapshot'
}

allprojects {

    sourceCompatibility = 14

//    mainClassName = 'me.shadowchild.candor.CandorLauncher'

    repositories {

        jcenter()
        mavenCentral()
        maven { url 'https://jitpack.io' }
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += '--enable-preview'
    }
    tasks.withType(Test) {
        jvmArgs += "--enable-preview"
    }
}

//apply plugin: 'com.github.johnrengelman.shadow'

dependencies {

    compile project(":core")
    compile project(":gui")
    compile project(":entry")
//    compile project(":genericmodule")
}

shadowJar {

    archiveBaseName = 'CandorManager'
    archiveClassifier = ''
    archiveVersion = "${subprojects.version[0]}"
//    classifier = ''
    exclude 'me/shadowchild/candor/generic/**'

    manifest {

        attributes 'Main-Class': 'me.shadowchild.candor.CandorLauncher'
        attributes 'Premain-Class': 'ca.cgjennings.jvm.JarLoader'
        attributes 'SplashScreen-Image': 'splash.png'
    }
}

task copyGenericModule(type: Copy) {

    dependsOn 'shadowJar'

    File packOutput = new File(project.getBuildDir(), "packaged/module/")
    if(!packOutput.exists()) packOutput.mkdirs()

    from "$projectDir/genericmodule/build/libs"
    into "$buildDir/packaged/module/"
}

task copyJars(type: Copy) {

    dependsOn 'copyGenericModule'

    from "$buildDir/libs"
    include "*.jar"
    into "$buildDir/packaged"
}

task copyScripts(type: Copy) {

    dependsOn 'copyJars'

    from "$projectDir/scripts"
    into "$buildDir/packaged"
}

task zipCandor(type: Zip) {

    dependsOn 'copyScripts'

    from "$buildDir/packaged"
    include '*'
    include '*/*'
    exclude '*.zip'
    archiveFileName = 'CandorModManager.zip'
    destinationDirectory = file("$buildDir/packaged")
}

task packageCandor {

    dependsOn 'clean', 'zipCandor'
}


